Interim fix for nav button text overflow

--- a/CSS/Base/Item.css
+++ b/CSS/Base/Item.css
@@ -37,6 +37,7 @@
 	width: 158px;
 	height: 32px;
 	margin-top: -5px;
+	overflow: hidden;
 	
 	border-style: solid;
 	border-width: 1px;
